--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ html{
 body{
     max-width: 1200px;
     max-height: 100vh;
-    background-image: linear-gradient(#7394b5, #ffff);
 }
 
 /* 
@@ -24,6 +23,7 @@ body{
 <--******************************** p-1 **********************************--> */
 
 section .header-container-p1{
+    background-image: linear-gradient(#7394b5, #ffff);
     height: 100vh;
 }
 
@@ -293,8 +293,8 @@ div.airplane-img::after{
     right: 100px;
     background-color: var(--textColor-p1);
     border-radius: 20px;
-    padding: 11px 15px;
-    font-size: 0.8rem;
+    padding: 12px 20px;
+    font-size: 0.75rem;
     font-weight: 550;
     top: -15px;
 }
@@ -306,4 +306,51 @@ a {
 
 a .btn-p1 .right-btn{
     right: 160px;
+}
+
+/* 
+<--****************************** (❁´◡`❁) ******************************-->
+<--******************************** p-2 **********************************--> */
+
+.container-p2{
+    min-height: 120vh;
+    min-width: 1100px;
+    box-sizing: border-box;
+    border-top: 1px solid gray;
+    margin: 5px -10px;
+}
+
+.container{
+    display: grid;
+    grid-template-areas: 
+    'title title title title'
+    'title title title title'
+    'sub1  sub1   sub2  sub2'
+    'sub1  sub1   sub2  sub2'
+    'sub3  sub3   sub4  sub4'
+    'sub3  sub3   sub4  sub4'
+    ;
+    grid-gap: 5px;
+}
+
+.sub-title{
+    padding:5px;
+    border-top: 1px solid black;
+}
+
+.title{
+    grid-area: title;
+}
+
+.sub1{
+    grid-area: sub1;
+}
+.sub2{
+    grid-area: sub2;
+}
+.sub3{
+    grid-area: sub3;
+}
+.sub4{
+    grid-area: sub4;
 }
