add final files

--- a/media.css
+++ b/media.css
@@ -1,5 +1,7 @@
 
     
+/* ( ͡ಠ ʖ̯ ͡ಠ) */
+
     @media (max-width:900px) {
 
         html{
@@ -19,7 +21,7 @@
         .cloud-5,
         .cloud-6, 
         .cloud-7{
-          display: none;
+        display: none;
         }
         
         .middle-nav ul{
